--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
     # Run the POSTMAN collection
     - name: Run Sample Postman Collections
       run: |
-       newman run postman_collections/postman_collection.json --reporters cli,htmlextra --reporter-htmlextra-export TestResults/HtmlReport.html
+       npm run test:newman
     # Upload the contents of Test Results directory to workspace
     - name: Output the run details
       uses: actions/upload-artifact@v3.1.2
